--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  "description": "React Native Template Project",
+  "description": "Creed Book Store",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -30,7 +30,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
